--- a/Html-формы/templates/promotion.html
+++ b/Html-формы/templates/promotion.html
@@ -5,6 +5,9 @@
     <title>Title</title>
 </head>
 <body>
+    <font color="red" size="4">Жди нас, марс!</font>
+    <p><p>
+    <img src="../static/photos/image.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet"
