--- a/Html-формы/templates/promotion.html
+++ b/Html-формы/templates/promotion.html
@@ -1,9 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+{% extends "base.html" %}
+
+{% block content %}
 <body>
     <font color="red" size="4">Жди нас, марс!</font>
     <p><p>
@@ -20,4 +17,4 @@
     <div class="alert alert-primary" role="alert">И начнем с Марса!</div>
     <div class="alert alert-primary" role="alert">Присоединяйся!</div>
 </body>
-</html>
+{% endblock %}
